--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Git Second Return</title>
 </head>
 <body>
-    <h1>You are in my home </h1>
-    <h2>You are my enemy</h2>
+    <h2>This is new branch</h2>
 </body>
 </html>
